--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.10"
 pymongo = "3.12"
 mongoengine = "^0.27.0"
 pika = "^1.3.2"
+beautifulsoup4 = "^4.12.2"
+requests = "^2.31.0"
 
 
 [build-system]
